--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 PORT=3000
-USER=Ezequiel
-password=sequi123
-dbName=animales
+MONGOUSER=mongo
+MONGOHOST=containers-us-west-32.railway.app
+MONGOPASSWORD=qpGPCTSNcWaMBWdOUWeB
+MONGOPORT= 8063
+MONGO_URL=mongodb://${{ MONGOUSER }}:${{ MONGOPASSWORD }}@${{ MONGOHOST }}:${{ MONGOPORT }}
