add endpoint of auth complete and routes secure

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 PORT=3001
+TOKEN_SECRET= laCajaDeCartonEstaHechaDeMetal
 MONGOUSER=mongo
 MONGOHOST=containers-us-west-32.railway.app
 MONGOPASSWORD=qpGPCTSNcWaMBWdOUWeB
